--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
     justify-content: space-between;
     position: sticky;
     top: 0;
+    background-color: #1F2937;
 }
 
 .header-links {
@@ -104,4 +105,119 @@ li a {
     color: white;
     font-weight: 700; 
     padding: 10px 32px;
+}
+
+.info-section {
+    text-align: center;
+}
+
+.info-title {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+    margin: 48px 0px;
+}
+
+.info-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 50px;
+    margin-bottom: 68px;
+}
+
+.info-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.info-img {
+    min-width: 150px;
+    min-height: 150px;
+    border: 4px solid #3882F6;
+    border-radius: 10px;
+}
+
+.info-text {
+    text-align: center;
+    max-width: 150px;
+}
+
+.quote-section {
+    background-color: #E5E7EB;
+    padding: 84px 30%;
+    font-style: italic;
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: lighter;
+}
+
+.quote {
+    font-style: italic;
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: lighter;
+    margin: 0;
+}
+
+.quote-author {
+    text-align: end;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+@media only screen and (max-width: 800px) {
+    .quote-section {
+        padding: 84px 10%;
+    }
+}
+
+.call-to-action-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 84px 0px;
+}
+
+.action-card {
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 48px 100px;
+    flex-basis: 1000px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px
+}
+
+.card-title {
+    font-size: 19px;
+    color: #F9FAF8;
+    font-weight: bold;
+}
+
+.card-text {
+    font: 17px;
+    color: #F9FAF8;
+}
+
+.btn-action {
+    border: 2px solid #F9FAF8;
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 8px 32px;
+    font-size: 17px;
+    color: #F9FAF8;
+    font-weight: 700;
+}
+
+.footer {
+    background-color: #1F2937;
+    min-height: 100px;
+    display: flex;
+    color: #F9FAF8;
+    justify-content: center;
+    align-items: center;
 }
