--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ li a {
 
 .img {
     flex-grow: 0;
-    min-width: 500px;
+    flex-basis: 500px;
     min-height: 250px;
     background-color: rgb(141, 139, 153);
     color: #F9FaF8;
